--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: feedback-portal
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn backend.main:app --host 0.0.0.0
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.0
